# slurpsearch

./: Cargo.toml  DEVELOP.md  README.md  test.md
.github/workflows/: main.yml
src/: cli.rs  extract.rs  fetch.rs  main.rs  rag.rs  search.rs
